RESOLVED FIXED200802
REGRESSION (r248436): WKWebView doesn’t respect isOpaque setting in NIB
https://bugs.webkit.org/show_bug.cgi?id=200802
Summary REGRESSION (r248436): WKWebView doesn’t respect isOpaque setting in NIB
Timothy Hatcher
Reported 2019-08-15 17:33:56 PDT
Follow up to bug 200528 with corrections and tests, and fix a regression with NIB unarchiving. <rdar://problem/54357818>
Attachments
Patch (12.60 KB, patch)
2019-08-15 17:39 PDT, Timothy Hatcher
no flags
Patch (12.58 KB, patch)
2019-08-16 09:39 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2019-08-15 17:39:36 PDT
Tim Horton
Comment 2 2019-08-15 21:30:25 PDT
Comment on attachment 376452 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=376452&action=review > Tools/TestWebKitAPI/Tests/ios/WKWebViewOpaque.mm:2 > + * Copyright (C) 2016 Apple Inc. All rights reserved. 2016!
Timothy Hatcher
Comment 3 2019-08-16 09:39:28 PDT
WebKit Commit Bot
Comment 4 2019-08-16 10:23:34 PDT
Comment on attachment 376504 [details] Patch Clearing flags on attachment: 376504 Committed r248776: <https://trac.webkit.org/changeset/248776>
WebKit Commit Bot
Comment 5 2019-08-16 10:23:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.